Tue Nov 25 16:09:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_independent): no independent string points null_str.
	  [ruby-core:20082]

Tue Nov 25 03:37:42 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/blt/tabset.rb, 
	  ext/tk/lib/tkextlib/blt/tabnotebook.rb: 
	  fix many bugs. Now, those work properly.

Mon Nov 24 23:53:44 2008  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/logger.rb: imported upstream version (logger/1.2.7)
	  * do not raise an exception even if log writing failed.
	  * do not raise ShiftingError if an aged file already exists.
	    (no ShiftingError will be raised from 1.2.7, just warn() instead)
	* test/logger/test_logger.rb: ditto.

Mon Nov 24 23:47:22 2008  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* time.c: RDoc typo fixed.

Sat Nov 22 10:31:25 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/blt.rb, ext/tk/lib/tkextlib/blt/vector.rb: 
	  fix NameError bug.

Wed Nov 19 17:52:35 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_s_alloc, rb_str_replace): use null_str as well as
	  rb_string_value so that extension libraries do not segfault.
	  [ruby-core:19971]

	* string.c (rb_str_replace): reduced unnecessary malloc and copy.

Wed Nov 19 03:13:36 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: fixed fails occasionally [ruby-dev:37119].
	  thanks, shinichiro.h.

Wed Nov 19 00:58:55 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbConn::alive?): fixed NoMethodError problem
	  from NaHi [ruby-dev:37110].

Tue Nov 18 20:30:08 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/net/ftp.rb (Net::FTP#open_socket): SOCKSsocket is obsolete.
	  a patch from Alan Johnson <alan.wayne.johnson at gmail.com> in 
	  [ruby-core:19982].

Tue Nov 18 16:18:23 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (ProgName): fixed for svn, based on a patch from
	  Nobuhiro IMAI at [ruby-dev:37108].
